--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -2,9 +2,11 @@
 @import "./partials/_clearfix";
 @import "./partials/work";
 @import "./partials/resume";
+@import "./partials/about";
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
   background-color: rgb(232,231,229);
 
   a, a:visited {
@@ -19,18 +21,22 @@ body {
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  padding: .5rem 0;
-  background-color: rgb(239,189,172);
+  padding: 1rem 0;
+  /*background-color: rgb(239,189,172);*/
+  background-color: rgb(194,218,205);
   /*background-color: rgb(149,183,148);*/
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
 
   #nicoleSandry {
   	flex: 0 0 auto;
     order: 1;
-    font-size: 1.75rem;
-    color: rgb(255,255,255);
+    font-size: 1.375rem;
+    color: rgb(0,0,0);
     margin-left: 2rem;
-    letter-spacing: .125rem;
+    letter-spacing: .5rem;
     text-transform: uppercase;
+    font-family: 'Oswald', sans-serif;
   }
 
   #desktop-nav {
@@ -39,13 +45,14 @@ body {
     display: none;
 
     // desktop viewing
-    @media screen and (min-width: 560px) {
+    @media screen and (min-width: 750px) {
       display: inline;
+      align-self: flex-end;
     }
   }
 
   .NavLink {
-    color: rgb(255,255,255);
+    color: rgb(0,0,0);
     padding-right: 2rem;
   }
 }
@@ -61,7 +68,7 @@ body {
   
   // move div element below the Nav bar when displayed
   position: absolute;
-  top: 3rem;
+  top: 4rem;
 
   // use z-index to overlap SVG images
   z-index: 1;
@@ -74,7 +81,7 @@ body {
   }
   
   // hide when viewing on desktop layout
-  @media screen and (min-width: 560px) {
+  @media screen and (min-width: 750px) {
     display: none;
   }
 }
@@ -88,7 +95,7 @@ body {
     cursor: pointer;
   }
 
-  @media screen and (min-width: 560px) {
+  @media screen and (min-width: 750px) {
     display: none;
   }
 }
@@ -97,12 +104,20 @@ body {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  padding: 0 2rem 1rem 2rem;
+  margin: 0 2rem 1rem 2rem;
 
+  a.svg {
+    display: inline-block;
+  }
+
+  .email-icon {
+    fill: red;
+  }
+  
   @media screen and (min-width: 560px) {
     justify-content: center;
     a {
-      padding: 0 1rem;
+      margin: 0 1rem;
     }
   }
 }
