--- a/client/src/index.css
+++ b/client/src/index.css
@@ -330,7 +330,12 @@ body {
   padding: 1rem 0;
   /*background-color: rgb(239,189,172);*/
   background-color: #c2dacd;
+  /*background-color: rgb(182,204,187);*/
+  /*background-image: linear-gradient(rgb(194,218,205),rgb(173,196,179));*/
+  background-image: linear-gradient(#c2dacd, #b6ccbb);
   /*background-color: rgb(149,183,148);*/
+  box-shadow: 0 1px 1px #ccc;
+  border-radius: 2px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500; }
   #Nav #nicoleSandry {
@@ -362,6 +367,8 @@ body {
   flex-flow: column nowrap;
   margin: 0;
   background-color: white;
+  box-shadow: 0 1px 1px #ccc;
+  border-radius: 2px;
   position: absolute;
   top: 4rem;
   z-index: 1; }
