--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -24,7 +24,12 @@ body {
   padding: 1rem 0;
   /*background-color: rgb(239,189,172);*/
   background-color: rgb(194,218,205);
+  /*background-color: rgb(182,204,187);*/
+  /*background-image: linear-gradient(rgb(194,218,205),rgb(173,196,179));*/
+  background-image: linear-gradient(rgb(194,218,205),rgb(182,204,187));
   /*background-color: rgb(149,183,148);*/
+  box-shadow: 0 1px 1px #ccc;
+  border-radius: 2px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
 
@@ -65,6 +70,8 @@ body {
   flex-flow: column nowrap;
   margin: 0;
   background-color: rgba(255,255,255,1.0);
+  box-shadow: 0 1px 1px #ccc;
+  border-radius: 2px;
   
   // move div element below the Nav bar when displayed
   position: absolute;
