--- a/client/src/scss/partials/work.scss
+++ b/client/src/scss/partials/work.scss
@@ -16,6 +16,7 @@
 	padding-bottom: .75rem;
 	text-align: left;
 	background-color: rgb(255,255,255);
+	box-shadow: 0 1px 1px #ccc;
 
 	@media screen and (min-width: 480px) {
 		max-width: 800px;
