--- a/client/src/index.css
+++ b/client/src/index.css
@@ -318,9 +318,21 @@ li {
   margin-top: 1.25rem;
   padding-bottom: 1.5rem;
   display: flex;
-  flex-flow: row wrap; }
+  flex-flow: column wrap; }
+  #About-Container img {
+    align-self: center; }
   #About-Container #text {
-    margin-left: 5rem; }
+    margin-top: 1.25rem;
+    text-align: center;
+    line-height: 1.25rem;
+    font-size: .83rem; }
+    #About-Container #text p:first-child {
+      margin-top: 0; }
+    #About-Container #text p {
+      margin-top: 1.25rem; }
+    #About-Container #text a:hover {
+      text-decoration: underline;
+      text-decoration-color: gray; }
 
 body {
   font-family: 'Montserrat', sans-serif;
