Tried to adjust the heigh at different break points. It's shaky, will have to resize later or remove.

--- a/client/src/scss/partials/resume.scss
+++ b/client/src/scss/partials/resume.scss
@@ -1,13 +1,14 @@
 #Resume {
 	display: flex;
-	flex-flow: column nowrap;
+	flex-flow: row wrap;
+	justify-content: center;
 	padding: 1.5rem 0;
 	text-align: left;
 	font-size: .83rem;
 	font-family: 'Montserrat', sans-serif;
+	width: 100%;
 
 	@media screen and (min-width: 922px) {
-		/*background-color: yellow;*/
 		width: 100%;
 		height: auto;
 	}
@@ -24,14 +25,13 @@
 	a:hover {
 		text-decoration: underline;
 		text-decoration-color: rgb(128,128,128);
-		/*color: rgb(194,170,136);*/
 	}
 
 	@media screen and (min-width: 750px) {
 		/*background-color: powderblue;*/
 		flex-flow: column wrap;
 		// must set height to stack elements
-		height: 1200px;
+		height: 1215px;
 		width: 85%;
 
 		// must set this to stack elements
@@ -53,10 +53,6 @@
 				text-align: left;
 				margin-left: .75rem;
 			}
-		}
-
-		@media screen and (min-width: 1225px) {
-			width: 950px;
 		}
 
 		#skills-container {
@@ -83,7 +79,44 @@
 			}
 
 		}
+	}
 
+	@media screen and (min-width: 766px) and (max-width: 800px) {
+		height: 1170px;
+	}
+
+	@media screen and (min-width: 801px) and (max-width: 830px) {
+		height: 1150px;
+	}
+
+	@media screen and (min-width: 831px) and (max-width: 880px) {
+		height: 1130px;
+	}
+	
+	@media screen and (min-width: 881px) and (max-width: 890px) {
+		height: 1100px;
+	}
+
+	@media screen and (min-width: 891px) and (max-width: 998px) {
+		height: 1060px;
+	}
+
+	@media screen and (min-width: 999px) and (max-width: 1080px) {
+		height: 1000px;
+	}
+
+	@media screen and (min-width: 1081px) and (max-width: 1150px) {
+		height: 990px;
+	}
+
+	@media screen and (min-width: 1151px) and (max-width: 1224px) {
+		height: 980px;
+	}
+
+	// set max width
+	@media screen and (min-width: 1225px) {
+		width: 950px;
+		height: 970px;
 	}
 }
 
