--- a/client/src/scss/partials/resume.scss
+++ b/client/src/scss/partials/resume.scss
@@ -144,15 +144,7 @@
 			font-weight: 300;
 
 		// contact icons
-/*		img {
-			width: 1rem;
-			height: 1rem;
-			padding-right: .375rem;
-			position: relative;
-			top: 2px;
-		}*/
-
-		object {
+		img {
 			width: 1rem;
 			height: 1rem;
 			padding-right: .375rem;
